+Test 1 -> to Buffer.java